--- a/views/partials/playerCard.hbs
+++ b/views/partials/playerCard.hbs
@@ -3,12 +3,12 @@
   <div class="card">
     <img
       class="card-img-top"
-      src="https://www.kigaeno.de/fileadmin/_processed_/b/c/csm_P1050390_785318d474.jpg"
-      alt=""
+      src="{{this.image}}"
+      alt="{{this.name}}"
     />
     <div class="card-body">
-      <h5 class="card-title">Milchzahnbande (Test)</h5>
-      <p class="card-text">Prenzlauer Berg</p>
+      <h5 class="card-title">{{this.locationName}}</h5>
+      <p class="card-text">City</p>
     </div>
   </div>
 </div>
