--- a/views/test.hbs
+++ b/views/test.hbs
@@ -1,12 +1,13 @@
 <br>
 <br>
-<h2>Locations with Partials (Test)</h2>
+<h2>Locations() with Partials (Test)</h2>
 <br>
 <br>
 
 <div class="container">
-
   <div class="row">
-    {{> playerCard}}
+    {{#each locos}}
+    {{> playerCard this}}
+    {{/each}}
   </div>
 </div>
