--- a/views/test.hbs
+++ b/views/test.hbs
@@ -6,7 +6,7 @@
 
 <div class="container">
   <div class="row">
-    {{#each locos}}
+    {{#each pickUpfromDB}}
     {{> playerCard this}}
     {{/each}}
   </div>
