--- a/views/admin/AdminLocationDetails.hbs
+++ b/views/admin/AdminLocationDetails.hbs
@@ -4,7 +4,7 @@
 {{#with locationsList}}
   <p>Name:  <b>{{this.name}}</b></p>
   <p>Address:  <b>{{this.adress}}</b></p>
-  <p>Items available:  <b>{{this.items}}</b></p>
+  <p>Items available:  <b>{{this.stock}}</b></p>
   <a href="{{_id}}/locationEdit">Edit this location</a>
   <a href="{{_id}}/locationDel">Delete this location</a>
   <hr>
