--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,14 +1,11 @@
 <h2>Log In</h2>
 <form action="/login" method="POST">
-  <label for="username">Username</label>
-  <input type="text" name="username">
 
-  <br><br>
+  <label for="username">Username</label>
+  <input type="text" name="username"><br><br>
 
   <label for="">Password</label>
-  <input type="password" name="password">
-
-  <br><br>
+  <input type="password" name="password"><br><br>
 
   <button type="submit">Log In</button>
 </form>
