--- a/views/partials/playerCard.hbs
+++ b/views/partials/playerCard.hbs
@@ -4,7 +4,7 @@
     <img
       class="card-img-top"
       src="{{this.image}}"
-      alt="{{this.name}}"
+      alt="{{this.locationName}}"
     />
     <div class="card-body">
       <h5 class="card-title">{{this.locationName}}</h5>
