--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,4 @@
-<<<<<<< HEAD
 <h1>👋 Welcome Dycle Express Delivery</h1>
 
 <a href="/signup">Sign Up</a>
-=======
->>>>>>> 36c6198a4e0e4ce387de3b9c35d10d901f67825b
+<a href="/login">Log In</a>
