--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,12 @@ a {
   height: 200px;
   object-fit: cover;
 }
+
+.btn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 24px;
+  cursor: pointer;
+  display: inline-block;
+}
