--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Dycle</title>
-    <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="./stylesheets/style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-     <nav class="navbar navbar-expand-lg class="navbar navbar-light" style="background-color: #e3f2fd;">
+     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
       <a class="navbar-brand" href="#">DYCLE</a>
       <button
         class="navbar-toggler"
@@ -22,12 +22,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/">
-            Home
+          <a class="nav-item nav-link active" href="./location">
+            Locations
             <span class="sr-only">(current)</span>
           </a>
-          <a class="nav-item nav-link" href="/players">About</a>
-          <a class="nav-item nav-link" href="/">Locations</a>
+          
         </div>
       </div>
     </nav>
