--- a/views/locationNew.hbs
+++ b/views/locationNew.hbs
@@ -1,22 +1,7 @@
-<br>
-<br>
-<h2>Pickup Locations</h2>
-<br>
-<br>
-
-<div class="container">
-  <div class="row">
-    {{#each pickUpfromDB}}
-    {{> playerCard this}}
-    {{/each}}
-  </div>
-</div>
-
-
 <!-- ADD LOCATION -->
 <br><br>
 <h2>Add new Location</h2>
-<form action="/test" method="POST">
+<form action="/location" method="POST">
   <label for="title"><b>Location details: </b></label>
   <br>
   <label for="title">Name: </label>
@@ -38,20 +23,3 @@
   
   <button type="submit">Add location</button>
 </form>
-
-
-<!-- DELETE LOCATION -->
-<br><br>
-<h2>Edit Locations</h2>
-<div>
-  <ul>
-  {{#each pickUpfromDB}}
-  <br>
-    <ls>{{this.locationName}}</ls>
-    <br>
-    <a href="/test/edit/{{_id}}">Edit</a>
-    <span> | </span> <a href="/test/delete/{{_id}}">Delete</a>
-    <br>
-  {{/each}}
-  </ul>
-</div>
