--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,15 @@
 body {
   padding: 50px;
+
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+main {
+  padding: 50px;
+  padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
 }
 
 a {
@@ -20,3 +29,5 @@ a {
   cursor: pointer;
   display: inline-block;
 }
+
+
